test/module/bad-import-one-string.txt
;;; ERROR: 1
(module (import "foo" (param i32)))
(;; STDERR ;;;
module/bad-import-one-string.txt:2:23: syntax error, unexpected (, expecting TEXT
;;; STDERR ;;)
